# internship-task

./: .env  .pre-commit-config.yaml  README.md  db_models.py  docker-compose.yaml  exceptions.py  main.py  pyproject.toml  python_models.py  queries.py
app/: celery.py  config.py  dependencies.py  main.py
app/api/: analysis.py  auth.py  exchange.py  transactions.py  users.py
app/db/: sessions.py
app/exceptions/: exceptions.py
app/models/: db_models.py
app/schemas/: enums.py  python_models.py  transaction_schemas.py  user_schemas.py
app/services/: analysis_service.py  auth_service.py  exchange_service.py  queries.py  transaction_service.py  user_service.py
app/tasks/: create_report.py  update_rates.py
app/tests/: conftest.py  utils_test.py
app/tests/unit/: test_analysis_service.py  test_auth_service.py  test_exchange_service.py  test_transaction_service.py  test_user_service.py
docker/: Dockerfile.app  Dockerfile.worker
dumps/: dump_2025-02-08_15-45-58.sql
scripts/: dump.sh  restore.sh
