[tool.poetry]
name = "task"
version = "0.1.0"
description = ""
authors = ["Author <author@gmail.com>"]
readme = "README.md"
packages = [
  { include = "app", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
uvicorn = "^0.23.2"
httpx = "^0.25.0"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.37"
aiosqlite = "^0.20.0"
asyncpg = "^0.30.0"
pydantic = {extras = ["email"], version = "^2.10.6"}
alembic = "^1.14.1"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = "^2.10.1"
python-multipart = "^0.0.20"


[tool.poetry.group.dev.dependencies]
faker = "^19.10.0"
pylint = "^3.0.1"
pylint-pydantic = "^0.3.0"
pytest = "^7.4.2"
pytest-alembic = "^0.10.7"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-env = "^1.0.1"
pytest-httpx = "^0.26.0"
pytest-mock = "^3.11.1"
pytest-mock-server = "^0.3.0"
pytest-xdist = "^3.3.1"
pre-commit = "^4.1.0"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = "120"
